# crew_ajent_task

./: README.md  main.py  main2.py  poem.txt  pyproject.toml
