[project]
name = "dev_flow"
version = "0.1.0"
description = "Dev_flow using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0",
]

[project.scripts]
kickoff = "dev_flow.main:kickoff"
plot = "dev_flow.main:plot"
dev-ajent = "dev_flow.main1:kickoff"
dev-ajent1 = "dev_flow.main2:kickoff"
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
